[package]
name = "rustyroad"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8.2", features = ["v4"] }
tokio = { version = "1.14.0", features = ["full"] }
futures = "0.3"
log = "0.4"
env_logger = "0.9.0"
prometheus = { version = "0.13.0", features = ["process"] }
lazy_static = "1.4.0"
hyper = { version = "0.14.17", features = ["full"] }
